--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.0.0",
   "private": false,
   "author": "your-name",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "engines": {
     "node": "4.4.3",
     "npm": "2.15.1"
   },
   "scripts": {
-    "test": "grunt test",
-    "postinstall": "bower install"
+    // "test": "grunt test",
+    // "postinstall": "bower install"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "postinstall": "bash ./post_install.sh"
   },
   "dependencies": {
-    "bower": "1.7.1",
+    "bower": "^1.7.1",
     "express": "4.13.3"
   },
-  "cacheDirectories": ["node_modules"]
+  "cacheDirectories": [
+    "node_modules"
+  ]
 }
