--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "test": "grunt test",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "bower": "1.7.1",
